Fixed multiple initial bugs with Challenges, this necessitated me moving them into their own class and setting them up similarly to Doomsdays, however, now they work correctly
Created alternative reward arrays for if the difficulty wasn't that high, added boss spawn eggs to the higher difficulty rewards, added amulets to the highest difficulty reward
array tier
Added all of the localizations of the Challenges to the lang file (took FOREVER)
Added the lore and enchantment tiers to each of the armor sets
Added ability of Light Armor to extinguish the player if they are on fire
Optimized a bit of armor tick code
Adding a variable item icon for damaged armor, it'll be the same icon but the texture will be made to look a bit scruffy, broken or faded
If this looks good and isn't too difficult to implement, then I'll do the same for the weapons
Messed with the option of adding variable tetures for items (aesthetic variation), but it seems like a lot of extra work creating multiple textures for each item that uses it
so I'll maybe scrap it until later on when I have not as much stuff to do on the mod
I will be implementing the "damaged" weapon textures though as this is just 1 texture and will only be for weapons and armor
Reduced polling of some of the events that used the on update method, to reduce overall lag

1.35.1341++ <158> (August 28, 2014)


--Reminders--
Add the Vox Stellarum, Nyx and Erebus, Claymation and the Erkel (1 mini-boss, 2 bosses (technically 3), and a passive mob)
Start adding the "Epic" weapons and armor along with their Doomsdays, add more of the amulets
Add the overall amulet rarities to the chest gen hooks
Work more on mob aesthetics as I get closer to a "finished" 1.0 release
Add another dynamic item of some sort, maybe a treasure hunt type of thing (I like the idea of having treasure hunts) or the Challenge items I previously thought of